// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`another session active 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #2C3A73;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Another Session Is Active
        </div>
      </div>
      <div
        class="c7 c8"
      >
        This desktop has an active session, connecting to it may close the other session. Do you wish to continue?
      </div>
      <div
        class="c9"
      >
        <button
          class="c10"
          kind="primary"
        >
          Abort
        </button>
        <button
          class="c11"
          kind="secondary"
        >
          Continue
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`connected settings false 1`] = `
.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c18 .c8 {
  color: inherit;
}

.c18:disabled {
  color: rgba(255,255,255,0.3);
}

.c18:disabled {
  color: rgba(255,255,255,0.3);
  cursor: default;
}

.c18:hover:enabled,
.c18:focus:enabled {
  background: rgba(255,255,255,0.1);
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 16px;
  padding-right: 16px;
}

.c17 {
  font-weight: 600;
  font-size: 14px;
  align-self: 'center';
}

.c14 {
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.3);
}

.c14:hover,
.c14:focus {
  background-color: rgba(255,255,255,0.3);
}

.c12 {
  position: relative;
}

.c11 {
  font-weight: 600;
  font-size: 18px;
  align-self: center;
}

.c10 {
  font-weight: 600;
  font-size: 22px;
  align-self: center;
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <span
            class="c8 c9 icon icon-folder-shared c10"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c8 c9 icon icon-clipboard-text c11"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Clipboard Sharing Disabled"
          />
          <div
            class="c12"
          >
            <button
              class="c13 c14"
              kind="primary"
              title="Warnings"
            >
              <div
                class="c0 c15"
              >
                <span
                  class="c8 c16 icon icon-warning c17"
                  color="light"
                />
                 
                0
              </div>
            </button>
          </div>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c18"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c8 c19 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <canvas
      style="display: flex; flex: 1;"
    />
  </div>
</div>
`;

exports[`connected settings true 1`] = `
.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c18 .c8 {
  color: inherit;
}

.c18:disabled {
  color: rgba(255,255,255,0.3);
}

.c18:disabled {
  color: rgba(255,255,255,0.3);
  cursor: default;
}

.c18:hover:enabled,
.c18:focus:enabled {
  background: rgba(255,255,255,0.1);
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 16px;
  padding-right: 16px;
}

.c17 {
  font-weight: 600;
  font-size: 14px;
  align-self: 'center';
}

.c14 {
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.3);
}

.c14:hover,
.c14:focus {
  background-color: rgba(255,255,255,0.3);
}

.c12 {
  position: relative;
}

.c11 {
  font-weight: 600;
  font-size: 18px;
  align-self: center;
}

.c10 {
  font-weight: 600;
  font-size: 22px;
  align-self: center;
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <span
            class="c8 c9 icon icon-folder-shared c10"
            color="light"
            style="color: rgba(255, 255, 255, 0.87);"
            title="Directory Sharing Enabled"
          />
          <span
            class="c8 c9 icon icon-clipboard-text c11"
            color="light"
            style="color: rgba(255, 255, 255, 0.87);"
            title="Clipboard Sharing Enabled"
          />
          <div
            class="c12"
          >
            <button
              class="c13 c14"
              kind="primary"
              title="Warnings"
            >
              <div
                class="c0 c15"
              >
                <span
                  class="c8 c16 icon icon-warning c17"
                  color="light"
                />
                 
                0
              </div>
            </button>
          </div>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c18"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c8 c19 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <canvas
      style="display: flex; flex: 1;"
    />
  </div>
</div>
`;

exports[`connection error 1`] = `
.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #2C3A73;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c9 a {
  color: #FFFFFF;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Error
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
          kind="danger"
        >
          some connection error
        </div>
        Refresh the page to try again.
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`disconnected 1`] = `
.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c18 .c8 {
  color: inherit;
}

.c18:disabled {
  color: rgba(255,255,255,0.3);
}

.c18:disabled {
  color: rgba(255,255,255,0.3);
  cursor: default;
}

.c18:hover:enabled,
.c18:focus:enabled {
  background: rgba(255,255,255,0.1);
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c20 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 16px;
  padding-right: 16px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c17 {
  font-weight: 600;
  font-size: 14px;
  align-self: 'center';
}

.c14 {
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.3);
}

.c14:hover,
.c14:focus {
  background-color: rgba(255,255,255,0.3);
}

.c12 {
  position: relative;
}

.c11 {
  font-weight: 600;
  font-size: 18px;
  align-self: center;
}

.c10 {
  font-weight: 600;
  font-size: 22px;
  align-self: center;
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <span
            class="c8 c9 icon icon-folder-shared c10"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c8 c9 icon icon-clipboard-text c11"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Clipboard Sharing Disabled"
          />
          <div
            class="c12"
          >
            <button
              class="c13 c14"
              kind="primary"
              title="Warnings"
            >
              <div
                class="c0 c15"
              >
                <span
                  class="c8 c16 icon icon-warning c17"
                  color="light"
                />
                 
                0
              </div>
            </button>
          </div>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c18"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c8 c19 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c20"
    >
      <div
        class="c21"
      >
        Session successfully disconnected
      </div>
    </div>
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`fetch error 1`] = `
.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #2C3A73;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c9 a {
  color: #FFFFFF;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Error
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
          kind="danger"
        >
          some fetch  error
        </div>
        Refresh the page to try again.
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`invalid processing 1`] = `
.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #2C3A73;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c9 a {
  color: #FFFFFF;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Error
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
          kind="danger"
        >
          The application has detected an invalid internal application state.         Please file a bug report for this issue at         https://github.com/gravitational/teleport/issues/new?assignees=&labels=bug&template=bug_report.md
        </div>
        Refresh the page to try again.
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`processing 1`] = `
.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c18 .c8 {
  color: inherit;
}

.c18:disabled {
  color: rgba(255,255,255,0.3);
}

.c18:disabled {
  color: rgba(255,255,255,0.3);
  cursor: default;
}

.c18:hover:enabled,
.c18:focus:enabled {
  background: rgba(255,255,255,0.1);
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c20 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 16px;
  padding-right: 16px;
}

.c17 {
  font-weight: 600;
  font-size: 14px;
  align-self: 'center';
}

.c14 {
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.3);
}

.c14:hover,
.c14:focus {
  background-color: rgba(255,255,255,0.3);
}

.c12 {
  position: relative;
}

.c11 {
  font-weight: 600;
  font-size: 18px;
  align-self: center;
}

.c10 {
  font-weight: 600;
  font-size: 22px;
  align-self: center;
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <span
            class="c8 c9 icon icon-folder-shared c10"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c8 c9 icon icon-clipboard-text c11"
            color="light"
            style="color: rgba(255, 255, 255, 0.87);"
            title="Clipboard Sharing Enabled"
          />
          <div
            class="c12"
          >
            <button
              class="c13 c14"
              kind="primary"
              title="Warnings"
            >
              <div
                class="c0 c15"
              >
                <span
                  class="c8 c16 icon icon-warning c17"
                  color="light"
                />
                 
                0
              </div>
            </button>
          </div>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c18"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c8 c19 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c20"
    />
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`tdp processing 1`] = `
.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color 0.3s;
  padding-right: 16px;
  color: #FFFFFF;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c19 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c18 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.56);
}

.c18 .c8 {
  color: inherit;
}

.c18:disabled {
  color: rgba(255,255,255,0.3);
}

.c18:disabled {
  color: rgba(255,255,255,0.3);
  cursor: default;
}

.c18:hover:enabled,
.c18:focus:enabled {
  background: rgba(255,255,255,0.1);
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c20 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c15 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 16px;
  padding-right: 16px;
}

.c17 {
  font-weight: 600;
  font-size: 14px;
  align-self: 'center';
}

.c14 {
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.3);
}

.c14:hover,
.c14:focus {
  background-color: rgba(255,255,255,0.3);
}

.c12 {
  position: relative;
}

.c11 {
  font-weight: 600;
  font-size: 18px;
  align-self: center;
}

.c10 {
  font-weight: 600;
  font-size: 22px;
  align-self: center;
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.56);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <span
            class="c8 c9 icon icon-folder-shared c10"
            color="light"
            style="color: rgba(255, 255, 255, 0.56);"
            title="Directory Sharing Disabled"
          />
          <span
            class="c8 c9 icon icon-clipboard-text c11"
            color="light"
            style="color: rgba(255, 255, 255, 0.87);"
            title="Clipboard Sharing Enabled"
          />
          <div
            class="c12"
          >
            <button
              class="c13 c14"
              kind="primary"
              title="Warnings"
            >
              <div
                class="c0 c15"
              >
                <span
                  class="c8 c16 icon icon-warning c17"
                  color="light"
                />
                 
                0
              </div>
            </button>
          </div>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c18"
            color="text.secondary"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c8 c19 icon icon-ellipsis "
              color="light"
            />
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c20"
    />
    <canvas
      style="display: none; flex: 1;"
    />
  </div>
</div>
`;

exports[`unintended disconnect 1`] = `
.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #2C3A73;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c9 a {
  color: #FFFFFF;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Error
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
          kind="danger"
        >
          Session disconnected for an unknown reason.
        </div>
        Refresh the page to try again.
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`webauthn prompt 1`] = `
.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 130px;
  margin-right: 16px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #2C3A73;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 40px;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  text-align: center;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  color: rgba(255,255,255,0.87);
  text-align: center;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: center;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #1C254D;
  color: rgba(255,255,255,0.87);
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 400px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.primary"
        >
          Verify Your Identity
        </div>
      </div>
      <div
        class="c7 c8"
      >
        
        <div
          class="c9"
        >
          Re-authentication is required. Follow the prompts given by your browser to complete authentication.
        </div>
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="primary"
          width="130px"
        >
          Verify
        </button>
        <button
          class="c12"
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
